cluster/apps/networking-system/ingresses/base/gatus/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  labels:
    app.kubernetes.io/name: gatus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.${SECRET_DOMAIN_1}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: gatus
          port: 8080
          namespace: monitoring-system
  tls:
    secretName: ${SECRET_DOMAIN_1//./-}-prod-tls
